# pipewise

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/agents/: privacy-reviewer.md
.github/: pull_request_template.md
.github/actions/pipewise-eval/: README.md  action.yml
.github/workflows/: ci-anthropic-quickstarts.yml  ci-langgraph.yml  ci.yml
docs/: adapter-guide.md  ci-integration.md  schema.md  scorers.md
examples/: README.md  demo_phase2_scorers.py
examples/anthropic-quickstarts/: README.md  capture_runs.py  pyproject.toml
examples/anthropic-quickstarts/pipewise_anthropic_quickstarts/: __init__.py  adapter.py  agent.py  capture.py  pricing.py  tools.py
examples/anthropic-quickstarts/runs/: dataset.jsonl  golden-001-iteration.json  golden-002-skipped.json
examples/anthropic-quickstarts/tests/: test_adapter.py  test_agent.py  test_capture.py  test_tools.py
examples/langgraph/: README.md  capture_runs.py  pyproject.toml
examples/langgraph/pipewise_langgraph/: __init__.py  adapter.py  capture.py  graph.py  tools.py
examples/langgraph/runs/: dataset.jsonl  golden-001-iteration.json  golden-002-skipped.json
examples/langgraph/tests/: test_adapter.py  test_capture.py  test_tools.py
pipewise/: __init__.py  cli.py
pipewise/ci/: __init__.py  __main__.py  github_action.py
pipewise/core/: __init__.py  report.py  schema.py  scorer.py
pipewise/runner/: __init__.py  adapter.py  dataset.py  diff.py  eval.py  inspect.py  scorer_config.py  storage.py
pipewise/scorers/: __init__.py  budget.py  embedding.py  exact_match.py  json_schema.py  llm_judge.py  numeric_tolerance.py  regex.py
tests/: test_smoke.py
tests/ci/: test_cli.py  test_github_action.py
tests/cli/: test_cli.py  test_eval_cmd.py
tests/core/: test_report.py  test_schema.py  test_scorer.py
tests/integration/: test_factspark_validation_gate.py  test_phase3_validation_gate.py  test_phase4_factspark_gate.py  test_phase4_resume_tailor_gate.py  test_resume_validation_gate.py
tests/runner/: test_adapter.py  test_dataset.py  test_diff.py  test_eval.py  test_inspect.py  test_scorer_config.py  test_storage.py
tests/scorers/: test_budget.py  test_embedding.py  test_exact_match.py  test_json_schema.py  test_llm_judge.py  test_numeric_tolerance.py  test_regex.py
