[project]
name = "pipewise"
version = "0.0.1"
description = "Evaluation framework for multi-step LLM pipelines."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Tyler Gohr", email = "tyler.gohr@gmail.com" },
]
keywords = ["llm", "evaluation", "evals", "pipeline", "agents", "ai-infra"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.7,<3",
    "jsonschema>=4.21",
    "typer>=0.12",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.7",
]
llm-judge = [
    "anthropic>=0.40",
]

[project.urls]
Homepage = "https://pipewise.dev"
Repository = "https://github.com/isthatamullet/pipewise"
Issues = "https://github.com/isthatamullet/pipewise/issues"

[project.scripts]
pipewise = "pipewise.cli:app"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipewise"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-jsonschema>=4.21",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# `sentence-transformers` is gated behind the `[embeddings]` optional extra,
# so it's not always present in the environment. The scorer lazy-imports it
# at call time and surfaces a clear ImportError to users — type-check it as
# an opaque dependency rather than failing the build when it's not installed.
[[tool.mypy.overrides]]
module = "sentence_transformers"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "error",
]
